# pisa_germany_2022

./: .gitignore  pyproject.toml  requirements.txt
doc/: pisa_data_dictionary.md
src/: clean_df.py  parse_data.py  streamlit.py
