[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pyreadstat>=1.3.1",
    "seaborn>=0.13.2",
]
